【laweye】starter：调整样式

--- a/app/laweye/index.html
+++ b/app/laweye/index.html
@@ -133,7 +133,7 @@
                             <div class="row stater-row stater-row-top">
                                 <!-- 待办任务 -->
                                 <div class="col-xs-4">
-                                    <div class="starter-panel radius-top-left">
+                                    <div class="starter-panel ">
                                         <div class="starter-panel-heading">待办任务</div>
                                         <div class="starter-panel-body">
                                             <div class="starter-list">
@@ -189,7 +189,7 @@
 
                                 <!-- 执法问题 -->
                                 <div class="col-xs-4">
-                                    <div class="starter-panel radius-top-right">
+                                    <div class="starter-panel ">
                                         <div class="starter-panel-heading">执法问题</div>
                                         <div class="starter-panel-body">
                                             <div class="starter-list">
@@ -239,7 +239,7 @@
 
                                 <!-- 我的常用 -->
                                 <div class="col-xs-3">
-                                    <div class="starter-panel radius-bottom-left">
+                                    <div class="starter-panel ">
                                         <div class="starter-panel-heading">我的常用</div>
                                         <div class="starter-panel-body">
                                             <div class="starter-shoutcutList clearfix">
@@ -311,7 +311,7 @@
 
                                 <!-- 单点接入 -->
                                 <div class="col-xs-3">
-                                    <div class="starter-panel radius-bottom-right">
+                                    <div class="starter-panel">
                                         <div class="starter-panel-heading">单点接入</div>
                                         <div class="starter-panel-body">
                                             <div class="starter-shoutcutList clearfix">
