【laweye】starter.css：完善“快捷搜索”功能样式

--- a/app/laweye/index.html
+++ b/app/laweye/index.html
@@ -130,7 +130,14 @@
                     <div class="launchpad-view-pageItem swiper-slide">
                         <div class="launchpad-starter container-fluid">
 
-                            <div class="row stater-row stater-row-top">
+                            <div class="row stater-row stater-row-top" id="stater-row-top">
+                                <div class="starter-search">
+                                    <input type="text" class="starter-search-input" title="应用搜索" placeholder="应用搜索" id="starter-search-input">
+                                    <button type="button" class="starter-search-btn"><i class="fa fa-search"></i></button>
+                                </div>
+                            </div>
+
+                            <div class="row stater-row stater-row-middle">
                                 <!-- 待办任务 -->
                                 <div class="col-xs-4">
                                     <div class="starter-panel ">
