【PKUI】webuploader：重构(3)，完成文件类型显示

--- a/test/testWebUploader.html
+++ b/test/testWebUploader.html
@@ -46,7 +46,7 @@
         "_mode": "full",
         "server": "#http://www.baidu.com",
         "dnd": "#webuploader .wu-dnd-placeholder",
-        "accept": {
+        "_accept": {
             "extensions": "gif,jpg,jpeg,bmp,png,doc,docx"
         },
         "fileNumLimit": 6,
